--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,10 @@ color:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/djrapp
+  - title: linkedin
+    url: https://www.linkedin.com/profile/view?id=105177762
 
 # Postal address (add as many lines as necessary)
 address:
