Fixed LinkedIn Link

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ social:
   - title: github
     url: http://github.com/djrapp
   - title: linkedin
-    url: https://www.linkedin.com/profile/view?id=105177762
+    url: https://www.linkedin.com/pub/david-rappaport/2b/282/916
 
 # Postal address (add as many lines as necessary)
 address:
