--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: David Rappaport
 email: david@rappaport.me
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Student at CU Boulder. Making cool things with wires."
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
