Jan 2016 content updates

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ social:
     url: http://github.com/djrapp
   - title: linkedin
     url: https://www.linkedin.com/pub/david-rappaport/2b/282/916
-
+  - title: file-text-o
+    url: http://portfolio.rappaport.me
 # Postal address (add as many lines as necessary)
 address:
   - line: 530.304.7958
