--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,10 @@ color:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: github
-    url: http://github.com/djrapp
   - title: linkedin
     url: https://www.linkedin.com/pub/david-rappaport/2b/282/916
   - title: file-text-o
-    url: http://portfolio.rappaport.me
+    url: http://davidrappaport.wixsite.com/portfolio
 # Postal address (add as many lines as necessary)
 address:
   - line: 530.304.7958
