--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ color:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
+  - title: instagram
+    url: https://www.instagram.com/d_rappaport
   - title: linkedin
     url: https://www.linkedin.com/pub/david-rappaport/2b/282/916
   - title: file-text-o
